--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,10 @@
+stages:
+  - build
+  - test
+
+
 build website:
+  stage: build
   image: node
   script:
     - npm install
@@ -7,3 +13,10 @@ build website:
   artifacts:
     paths:
       - ./public
+
+
+test artifact:
+    stage: test
+    script:
+      - grep "Gatsby" ./public/index.html
+      - grep "xxxxxxx" ./public/index.html
