--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,17 @@ build website:
 
 
 test artifact:
+    image: alpine
     stage: test
     script:
-      - grep "Gatsby" ./public/index.html
-      - grep "xxxxxxx" ./public/index.html
+      - grep -q "Gatsby" ./public/index.html
+
+test website:
+    image: node
+    stage: test
+    script:
+      - npm install
+      - npm install -g gatsby-cli
+      - gatsby serve
+      - curl "http://localhost:9000" | grep -q "Gatsby"
+      
