added deploy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
+image: node #default image
+
 stages:
   - build
   - test
+  - deploy
 
 
 build website:
   stage: build
-  image: node
   script:
     - npm install
     - npm install -g gatsby-cli
@@ -22,7 +24,6 @@ test artifact:
       - grep -q "Gatsby" ./public/index.html
 
 test website:
-    image: node
     stage: test
     script:
       - npm install
@@ -30,4 +31,10 @@ test website:
       - gatsby serve &
       - sleep 3
       - curl "http://localhost:9000" | tac | tac | grep -q "Gatsby"
+
+deploy to surge:
+  stage: deploy
+  script: 
+    - npm install --global surge
+    - surge --project ./public --domain greenpoopisawesome.surge.sh  
       
