took out deploy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,11 +33,11 @@ test website:
       - sleep 3
       - curl "http://localhost:9000" | tac | tac | grep -q "Gatsby"
 
-deploy to surge:
-  stage: deploy
-  script: 
-    - npm install --global surge
-    - surge --project ./public --domain greenpoopisawesomecauseYOUsaidso.surge.sh  
+# deploy to surge:
+#   stage: deploy
+#   script: 
+#     - npm install --global surge
+#     - surge --project ./public --domain greenpoopisawesomecauseYOUsaidso.surge.sh  
 
 test deployment:
   stage: deployment tests
