--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,13 +38,13 @@ deploy to surge:
   stage: deploy
   script: 
     - npm install --global surge
-    - surge --project ./public --domain greenpoopisawesomecauseYOUsaidso.surge.sh  
+    - surge --project ./public --domain greenpoopisawesome.surge.sh  
 
 test deployment:
   image: alpine
   stage: deployment tests
   script: 
     - apk add --no-cache curl
-    - curl -s "https://greenpoopisawesomecauseIsaidso.surge.sh" | grep -q "Hi people"
+    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
 
       
