--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build website:
     - npm install
     - npm install -g gatsby-cli
     - gatsby build
+    - sed -i "s/%%VERSION%%/$CI_COMMIT_SHORT_SHA/" ./public/index.html
   artifacts:
     paths:
       - ./public
@@ -46,5 +47,7 @@ test deployment:
   script: 
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
+    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"
+
 
       
