--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,11 @@ stages:
   - deployment tests
 
 
+cache:
+  key: ${CI_COMMIT_REF_SLUG}
+  paths: 
+    - node_modules
+
 build website:
   stage: build
   script:
