--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths: 
-    - node_modules
+    - node_modules/
 
 build website:
   stage: build
