--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build website:
 test artifact:
     image: alpine
     stage: test
+    cache: {}
     script:
       - grep -q "Gatsby" ./public/index.html
 
@@ -49,6 +50,7 @@ deploy to surge:
 test deployment:
   image: alpine
   stage: deployment tests
+  cache: {}
   script: 
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
