--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths: 
     - node_modules/
+  policy: pull #only pulling the cache, not uploading (push)
 
 build website:
   stage: build
@@ -54,7 +55,4 @@ test deployment:
   script: 
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
-    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"
-
-
-      
+    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"   
