--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - test
   - deploy
   - deployment tests
+  - cache
 
 
 cache:
@@ -12,6 +13,18 @@ cache:
   paths: 
     - node_modules/
   policy: pull #only pulling the cache, not uploading (push)
+
+update cache:
+  stage: cache
+  script: 
+    - npm install
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
+    policy: push
+  only:
+    - schedules
 
 build website:
   stage: build
@@ -24,6 +37,8 @@ build website:
   artifacts:
     paths:
       - ./public
+  except:
+    - schedules #if we want to run a job only when the pipeline is triggered by a schedule
 
 
 test artifact:
@@ -32,6 +47,8 @@ test artifact:
     cache: {}
     script:
       - grep -q "Gatsby" ./public/index.html
+    except:
+      - schedules
 
 test website:
   stage: test
@@ -41,12 +58,16 @@ test website:
     - gatsby serve &
     - sleep 3
     - curl "http://localhost:9000" | tac | tac | grep -q "Gatsby"
+  except:
+    - schedules
 
 deploy to surge:
   stage: deploy
   script: 
     - npm install --global surge
     - surge --project ./public --domain greenpoopisawesome.surge.sh  
+  except:
+    - schedules
 
 test deployment:
   image: alpine
@@ -55,4 +76,6 @@ test deployment:
   script: 
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
-    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"   
+    - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"  
+  except:
+    - schedules 
