--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,13 @@ stages:
   - deployment tests
   - cache
 
+#Artifacts: Use for stage results that will be passed between stages
+# --- usually the output of a build tool
+# --- can be used to pass data between stages/jobs
 
+#Caches: For storing project dependencies
+# --- not used to store build results
+# --- should only be used as TEMPORARY storage for project dependencies
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths: 
@@ -38,7 +44,7 @@ build website:
     paths:
       - ./public
   except:
-    - schedules #if we want to run a job only when the pipeline is triggered by a schedule
+    - schedules #If you don't want to run a job when the pipeline is triggered by a scheduled run
 
 
 test artifact:
