added staging and environments to project

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,9 @@ image: node #default image
 stages:
   - build
   - test
-  - deploy
-  - deployment tests
+  - deploy staging
+  - deploy production
+  - production tests
   - cache
 
 #Artifacts: Use for stage results that will be passed between stages
@@ -67,17 +68,34 @@ test website:
   except:
     - schedules
 
-deploy to surge:
-  stage: deploy
+deploy staging:
+  stage: deploy staging
+  environment: 
+    name: staging
+    url: http://greenpoopisawesome-staging.surge.sh
+  script: 
+    - npm install --global surge
+    - surge --project ./public --domain greenpoopisawesome-staging.surge.sh  
+  except:
+    - schedules
+
+
+
+
+deploy production:
+  stage: deploy production
+  environment: 
+    name: production
+    url: http://greenpoopisawesome-staging.surge.sh
   script: 
     - npm install --global surge
     - surge --project ./public --domain greenpoopisawesome.surge.sh  
   except:
     - schedules
 
-test deployment:
+production tests:
   image: alpine
-  stage: deployment tests
+  stage: production tests
   cache: {}
   script: 
     - apk add --no-cache curl
