--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ update cache:
     paths:
       - node_modules/
     policy: push
+  only:
+    - schedules
 
 build website:
   stage: build
@@ -42,6 +44,8 @@ build website:
   artifacts:
     paths:
       - ./public
+  except:
+    - schedules #If you don't want to run a job when the pipeline is triggered by a scheduled run
 
 
 test artifact:
@@ -50,6 +54,8 @@ test artifact:
     cache: {}
     script:
       - grep -q "Gatsby" ./public/index.html
+    except:
+      - schedules
 
 test website:
   stage: test
@@ -59,6 +65,8 @@ test website:
     - gatsby serve &
     - sleep 3
     - curl "http://localhost:9000" | tac | tac | grep -q "Gatsby"
+  except:
+    - schedules
 
 deploy staging:
   stage: deploy staging
@@ -68,8 +76,8 @@ deploy staging:
   script: 
     - npm install --global surge
     - surge --project ./public --domain greenpoopisawesome-staging.surge.sh  
-
-
+  except:
+    - schedules
 
 
 deploy production:
@@ -80,6 +88,8 @@ deploy production:
   script: 
     - npm install --global surge
     - surge --project ./public --domain greenpoopisawesome.surge.sh  
+  except:
+    - schedules
 
 production tests:
   image: alpine
@@ -89,3 +99,5 @@ production tests:
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "$CI_COMMIT_SHORT_SHA"  
+  except:
+    - schedules 
