--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,6 @@ variables:
   STAGING_DOMAIN: greenpoopisawesome-staging.surge.sh
   PRODUCTION_DOMAIN: greenpoopisawesome.surge.sh
 
-
 update cache:
   stage: cache
   script: 
@@ -52,7 +51,6 @@ build website:
   except:
     - schedules #If you don't want to run a job when the pipeline is triggered by a scheduled run
 
-
 test artifact:
     image: alpine
     stage: test
@@ -78,18 +76,23 @@ deploy staging:
   environment: 
     name: staging
     url: http://$STAGING_DOMAIN
+  only: # job will only execute on master branch
+    - master
   script: 
     - npm install --global surge
     - surge --project ./public --domain $STAGING_DOMAIN  
   except:
     - schedules
 
-
 deploy production:
   stage: deploy production
   environment: 
     name: production
     url: $PRODUCTION_DOMAIN
+  only: # job will only execute on master branch
+  - master
+  # when: manual # manual deployment
+  # allow_failure: false #blocks pipeline until all task are run
   script: 
     - npm install --global surge
     - surge --project ./public --domain $PRODUCTION_DOMAIN 
@@ -100,6 +103,8 @@ production tests:
   image: alpine
   stage: production tests
   cache: {}
+  only: # job will only execute on master branch
+    - master
   script: 
     - apk add --no-cache curl
     - curl -s "https://greenpoopisawesome.surge.sh" | grep -q "Hi people"
